syntax = "proto3";

package api.user.response;

message GetDevices {
    message Result {
        message Value {
            uint32 id = 1;
            bytes public_key = 2;
        }
        repeated Value values = 1;
    }
    message Error {
        enum Code {
            USER_NOT_FOUND = 0;
        }
        Code code = 1;
    }
    optional Result result = 1;
    optional Error error = 2;
}
